# brand3.0

./: .env.example  .gitignore  .graphifyignore  AGENTS.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  README.md  REVIEW_NOTES.md  REVIEW_REPORT.md  fly.toml  litestream.yml  main.py  netlify.toml  pyproject.toml  test_social_collector.py  tsconfig.visual-signature.json
deploy/: entrypoint.sh
docs/: benchmark_policy.md  benchmark_validation.md  editorial_readiness_policy.md  environment.md  scoring_review.md
examples/: canonical_benchmark.template.json  social_example.py  startup_benchmark.json
experiments/: capture_benchmark.py  online_presence_inventory.py
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
migrations/: 005_web_requests.sql  006_evidence_items.sql  007_llm_cache.sql
netlify/: index.html
scripts/: backfill_report_narrative.py  inspect_report_readiness.py  run_benchmark_validation.sh  run_web_dev_macos.sh  summarize_latest_outputs.py  visual_signature_annotate_corpus.py  visual_signature_build_baselines.py  visual_signature_build_review_reports.py  visual_signature_calibrate.py  visual_signature_calibration.py  visual_signature_calibration_readiness.py  visual_signature_calibration_reliability_report.py  visual_signature_calibration_validate.py  visual_signature_capability_registry.py  visual_signature_capture_screenshots.py  visual_signature_corpus_expansion.py  visual_signature_corpus_pass.py  visual_signature_governance_integrity.py  visual_signature_inspect.py  visual_signature_phase_one_generate.py  visual_signature_phase_one_validate.py  (+11 more)
(+1003 files in other folders)
