[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brand3-scoring"
version = "0.1.0"
description = "Brand health scoring pipeline"
requires-python = ">=3.11"
dependencies = [
  "exa-py>=1.8.8",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]

[tool.setuptools.packages.find]
include = ["src", "src.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
