[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brand3-scoring"
version = "0.1.0"
description = "Brand health scoring pipeline"
requires-python = ">=3.11"
dependencies = [
  "exa-py>=1.8.8",
  "fastapi>=0.115.0",
  "firecrawl-py>=4.0,<5",
  "itsdangerous>=2.2.0",
  "jinja2>=3.1.4",
  "pydantic-settings>=2.5.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
]

[tool.setuptools.package-data]
"web" = ["templates/*.j2", "static/*"]

[tool.setuptools.packages.find]
include = ["src", "src.*", "web", "web.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
